# system-sales

./: package-lock.json  package.json  tailwind.config.js
public/: background.jfif
src/: App.jsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/models/: mod.rs  product.rs  sale.rs  shopping.rs
src-tauri/src/tools/: database.rs
src/components/: Button.jsx  CalculateAmount.jsx  CardReport.jsx  Details.jsx  Icon.jsx  InputField.jsx  ListProducts.jsx  NewProduct.jsx  Search.jsx  SelectionsProducts.jsx
src/components/dashboards/: DashBoard.jsx  DashBoardAdmin.jsx
src/components/login/: Form.jsx  LoginPage.jsx
src/components/sections/: ProductsSection.jsx  SalesSection.jsx  SellingSection.jsx
src/store/: getReport.js
