[package]
name = "system-sales"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jose Eduardo"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
mongodb = "2.7.1"
tokio = { version = "1", features = ["full"] }
bson = "2.7.0"
futures = "0.3"
chrono = "0.4"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
